update travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,4 @@ matrix:
 script: ./.travis/${TRAVIS_OS_NAME}-build.sh $OPTS
 
 notifications:
-  email:
-    recipients:
-      - ovs-build@openvswitch.org
+  email: false
